- Escape description of document_added description object. [elioschmutz]
- Use plone.protect class of confirm-action view. [elioschmutz]
- Assign correct roles in development content. [deiferni]
- Place successor proposal button next to workflow buttons. [Kevin Bieri]
- Remove document tooltip on touch devices. [Kevin Bieri]
- Fix dispatching notifications while recording a TaskReminderActivity. [elioschmutz]
- Prefill task-reminder select field on task response form. [elioschmutz]
- Use the same template for default notifiaction email like the daily-digest template. [elioschmutz]
- Make sure our Diazo theme doesn't drop data-base-url attribute. [lgraf]
- Bump Plone version to 4.3.18. [Rotonen, lgraf]
- Fix bug with document showroom for sablon and proposal templates. [njohner]
- Bump ftw.solr to 2.3.0 to get patched (optimized) reindexObjectSecurity(). [lgraf]
- Implement asynchronous meeting zip generation, with PDFs from the new demand endpoint. [deiferni, lgraf]
- Add new icon for private folder. [njohner]
- Sharing form: do not show search results multiple times. [phgross]
- Sharing form: fix removal of all role assignments. [phgross]
- Allow pasting templates into template folders. [Rotonen]
- Fix circular imports after using generate_remind_notifications_zopectl_handler entrypoint. [elioschmutz]
- Map gever_admins to the administrator_group in example content. [njohner]
- Fix parent reference number fetching for repository roots. [Rotonen]
- Style live search to match other dropdown menus. [njohner]
- OGGBundle: Fix encoding issue with UNC filepaths containing non-ASCII characters. [lgraf]
- Send notification dispatch exceptions to Raven. [Rotonen]
- Fix sharing-form local_roles inheritance fallback and skip it for administators and managers. [phgross]
- Do not present the paste UI to users without 'Copy or Move' on the target. [Rotonen]
- Disallow agency-support for private tasks. [elioschmutz]